[project]
name = "ai-voice-app"
version = "0.1.0"
requires-python = ">=3.10,<3.11"

dependencies = [
    "torch==2.4.0+cu118",
    "TTS==0.22.0",
    "transformers==4.40.0",
    "numpy==1.22.0",
    "scipy",
    "cutlet",
    "fugashi[unidic-lite]",  # 追加
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu118"]